// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAppDeclarationFile errors should generate common errors in domain 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        class CommonError extends Error {
            constructor(message: string);
        }
    }
}
export declare namespace hamburgerService {
    namespace v_1_0_0 {
        class HamburgerError extends Error {
            constructor(message: string);
        }
        function getHamburger(): Promise<string>;
        function setHamburger(): Promise<string>;
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        class ArticleError extends Error {
            constructor(message: string);
        }
        function getArticle(): Promise<string>;
        function setArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile errors should generate multi-service multi-error 1`] = `
"export declare namespace hamburgerService {
    namespace v_1_0_0 {
        class HamburgerError extends Error {
            constructor(message: string);
        }
        function getHamburger(): Promise<string>;
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        class ArticleError extends Error {
            constructor(message: string);
        }
        function getArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile errors should generate properties on generated error classes 1`] = `
"export declare namespace articleService {
    namespace v_1_0_0 {
        class ArticleError extends Error {
            constructor(message: string, myPublicProp: number, myProp: number);
        }
        function getArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile errors should generate service error 1`] = `
"export declare namespace articleService {
    namespace v_1_0_0 {
        class ArticleError extends Error {
            constructor(message: string);
        }
        function getArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile middleware should parse middleware 1`] = `
"export declare namespace samen {
    type SamenContext<T> = T;
}
export declare namespace articleService {
    namespace v_1_0_0 {
        interface User {
            uid: string;
        }
        type SamenContext<T = {}> = T;
        function getArticle(ctx: samen.SamenContext<{
            uid: string;
        }>, aap: string): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile typeAliases type aliases which are aliases of aliases 1`] = `
"export declare namespace workoutRoutineService {
    namespace v_1_0_0 {
        type TypeReal = {
            x: number;
        };
        type TypeRef = TypeReal;
        type Result = TypeRef;
        function getRoutine(versionId: string): Promise<Result>;
    }
}
"
`;
